examples/default/rendered/envs/mykso-dev/argocd/networkpolicy-argocd-application-controller-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: git@github.com:mykso/myks.git
  name: argocd-application-controller-network-policy
  namespace: argocd
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8082
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
    - Ingress
